removed unnecessary Double constructor